--- a/bookstore/views/myIndex.html
+++ b/bookstore/views/myIndex.html
@@ -54,7 +54,7 @@
     {{range .Books}}
     <div class="b_list">
       <div class="img_div">
-        <img class="book_img" alt="" src="{{.ImagePath}}" />
+        <img class="book_img" alt="" src="{{.ImgPath}}" />
       </div>
       <div class="book_info">
         <div class="book_name">
