--- a/bookstore/views/index.html
+++ b/bookstore/views/index.html
@@ -65,7 +65,7 @@
 			{{range .Books}}
 			<div class="b_list">
 				<div class="img_div">
-					<img class="book_img" alt="" src="{{.ImagePath}}" />
+					<img class="book_img" alt="" src="{{.ImgPath}}" />
 				</div>
 				<div class="book_info">
 					<div class="book_name">
